# unified_orchestrator

./: .env.example  .gitignore  API.md  AUTOMATED_SCORING_GUIDE.md  CHANGELOG.md  COMPLETE_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  CREW_TEST_SUMMARY.md  CURSOR_BROWSER_QUICKSTART.md  DESKTOP_COMMANDER_ANALYSIS.md  DUPLICATION_REPORT.md  FAISS_SUMMARY.md  FINAL_STATUS.md  HF_MCP_QUICK_GUIDE.md  INTEGRATION_PLAN.md  LIBRARY_RECOMMENDATIONS.md  LIBRARY_USAGE.md  M3_MAX_OPTIMIZATION_GUIDE.md  MEMORY_QUICKSTART.md  MEMORY_SETUP.md  MINIMAL_CREW_TEST_RESULTS.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  PARALLEL_ORCHESTRATION_ANALYSIS.md  PHASE1_COMPLETE.md  PHASE1_FINAL.md  PREMIUM_STACK_SETUP.md  PYTHON_VERSION_EXPLANATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SESSION_COMPLETE.txt  SESSION_FILES_CREATED.md  SETUP_GUIDE.md  START_HERE.md  TERMINAL_FIX.md  TRAINING_STATUS.md  V2.1_IMPLEMENTATION_PLAN.md  V2_ARCHITECTURE_COMPLETE.md  (+20 more)
.claude/: settings.local.json
benchmarks/: optimization_benchmark.py  parallel_benchmark.py
config/: warp_workflows.yaml
docs/: AGENT_UPGRADE_STATUS.md  ARCHITECTURE.md  CHROMA_INTEGRATIONS.md  CHROMA_MCP_INTEGRATION.md  COMET_BROWSER_MCP.md  COMET_PERPLEXITY_WORKFLOWS.md  CREW_COMPARISON.md  CURSOR_BROWSER_AUTOMATION.md  ERROR_ANALYSIS.md  MASTER_WORKFLOW_ORCHESTRATION.md  MIGRATION_v1_to_v2.md  MINIMAL_CREW_QUICKSTART.md  PERPLEXITY_COMET_INTEGRATION.md  PERPLEXITY_SPACE_INTEGRATION.md  PREMIUM_STACK_INTEGRATION.md  QUICK_START.md  TRIPLE_HUB_ARCHITECTURE.md  V2.1_FINAL_SUMMARY.md  V2.1_PART3_REVIEW.md  V2.1_PROGRESS.md  V2.1_SESSION_SUMMARY.md
examples/: example_anthropic.py  example_ollama.py  hf_pro_inference_example.py  research_crew.py  simple_example.py  tiny_spec.yaml  train_custom_model.py
mcp-generator/: README.md  agents.py  crew.py  generate.py  tasks.py  tools.py
monitoring/: README.md  alerts.yml  prometheus.yml
pipelines/: crew_pipeline_huggingface.py  crew_pipeline_local.py  pipeline_hf_pro.py
runs/: .last_workflow
scripts/: comet_integrations.py  coordinate_clients.scpt  evaluate_generated_code.py  ingest_from_clipboard.py  launch_workflow.sh  master_workflow.py  playwright_space_sync.py  prepare_training_data.py  setup_cron.sh  (+4 more)
(+91 files in other folders)
